added stcky nav

--- a/coltermay.com/index.html
+++ b/coltermay.com/index.html
@@ -19,12 +19,12 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header" id="header">
         <!-- ====== NAVIGATION ====== -->
         <nav class="main__nav">
             <a class="logo" href="#">Colter <span class="active">May</span>.</a>
             <ul class="nav">
-                <li class="nav__item"><a class="nav__link active" href="#">Home</a></li>
+                <li class="nav__item"><a class="nav__link active" href="#header">Home</a></li>
                 <li class="nav__item"><a class="nav__link" href="#art">Art work</a></li>
                 <li class="nav__item"><a class="nav__link" href="#about">About</a></li>
                 <li class="nav__item"><a class="nav__link" href="#contact">Contact</a></li>
@@ -176,7 +176,7 @@
                     </div>
                     <div class="modal">
                         <div class="close">&#x2715;</div>
-                        <div class="modal-content">
+                        <div class="long-horizontal">
                             <h2>Modal 5</h2>
                             <p>Some text inside modal</p>
                             <img src="./img/EasterSunrise-min.jpg" alt="Easter Sunrise" class="frame">
@@ -221,7 +221,7 @@
                     </div>
                     <div class="modal">
                         <div class="close">&#x2715;</div>
-                        <div class="modal-content">
+                        <div class="long-horizontal">
                             <h2>Modal 5</h2>
                             <p>Some text inside modal</p>
                             <img src="./img/EasterSunset-min.JPEG" alt="Easter Sunset" class="frame">
@@ -231,19 +231,19 @@
                 <div class="box">
                     <div class="thumbnail">
                         <div class="thumbnail-overlay"></div>
-                        <img class="thumbnail-img" src="./img/pink-fire-min.png" alt="Pink Fire" >
+                        <img class="thumbnail-img" src="./img/pink-fire-min.png" alt="Pink Fire">
                         <div class="read-more">Read more..</div>
                     </div>
                     <div class="modal">
                         <div class="close">&#x2715;</div>
-                        <div class="modal-content">
+                        <div class="long-vertical">
                             <h2>Modal 5</h2>
                             <p>Some text inside modal</p>
                             <img src="./img/pink-fire-min.png" alt="pink Fire" class="frame">
                         </div>
                     </div>
                 </div>
-                <div class="box">
+                <!-- <div class="box">
                     <div class="thumbnail">
                         <div class="thumbnail-overlay"></div>
                         <img class="thumbnail-img" src="./img/blackmore-min.jpg" alt="Blackmore">
@@ -256,7 +256,7 @@
                             <img src="./img/blackmore-min.jpg" alt="Blackmore" class="frame">
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="gallery__content">
                 <div class="box">
@@ -277,15 +277,15 @@
                 <div class="box">
                     <div class="thumbnail">
                         <div class="thumbnail-overlay"></div>
-                        <img class="thumbnail-img" src="./img/mtnArtboard-min.png" alt="Arboard">
+                        <img class="thumbnail-img"src="./img/mtnArtboard-min.png" alt="Mtn Board">
                         <div class="read-more">Read more..</div>
                     </div>
                     <div class="modal">
                         <div class="close">&#x2715;</div>
-                        <div class="modal-content">
+                        <div class="long-vertical">
                             <h2>Modal 5</h2>
                             <p>Some text inside modal</p>
-                            <img src="./img/mtnArtboard-min.png" alt="Arboad" class="frame">
+                            <img src="./img/mtnArtboard-min.png" alt="Mtn Board" class="frame">
                         </div>
                     </div>
                 </div>
@@ -313,7 +313,7 @@
                     </div>
                     <div class="modal">
                         <div class="close">&#x2715;</div>
-                        <div class="modal-content">
+                        <div class="long-vertical">
                             <h2>Modal 5</h2>
                             <p>Some text inside modal</p>
                             <img src="./img/musclebutt-min.jpg" alt="Muscle Butt" class="frame">
@@ -332,7 +332,7 @@
                     </div>
                     <div class="modal">
                         <div class="close">&#x2715;</div>
-                        <div class="modal-content">
+                        <div class="long-horizontal">
                             <h2>Modal 5</h2>
                             <p>Some text inside modal</p>
                             <img src="./img/EasterSunset-min.JPEG" alt="Easter Sunset" class="frame">
@@ -643,10 +643,9 @@
     </section>
 
     <script src="./js/main.js"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script> -->
 
 </body>
 
