updated about section responsive design

--- a/coltermay.com/index.html
+++ b/coltermay.com/index.html
@@ -146,10 +146,11 @@
                 </div>
                 <div class="popup__right">
                     <a href="#art" class="popup__close">&times;</a>
-                    <div class="modal__description">
+                    <div class="popup__description">
                         <span>12.03.2020</span>
                         <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                        <p>Some text inside modal</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius, iste aspernatur saepe voluptatibus</p>
                     </div>
                 </div>
             </div>
@@ -161,10 +162,11 @@
                 </div>
                 <div class="popup__right">
                     <a href="#art" class="popup__close">&times;</a>
-                    <div class="modal__description">
+                    <div class="popup__description">
                         <span>12.03.2020</span>
-                        <h3 class="heading__terceary">Title</h3>
-                        <p>Some text inside modal</p>
+                        <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius, iste aspernatur saepe voluptatibus</p>
                     </div>
                 </div>
             </div>
@@ -176,10 +178,11 @@
                 </div>
                 <div class="popup__right">
                     <a href="#art" class="popup__close">&times;</a>
-                    <div class="modal__description">
+                    <div class="popup__description">
                         <span>12.03.2020</span>
-                        <h3 class="heading__terceary">Title</h3>
-                        <p>Some text inside modal</p>
+                        <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius, iste aspernatur saepe voluptatibus</p>
                     </div>
                 </div>
             </div>
@@ -191,10 +194,11 @@
                 </div>
                 <div class="popup__right">
                     <a href="#art" class="popup__close">&times;</a>
-                    <div class="modal__description">
+                    <div class="popup__description">
                         <span>12.03.2020</span>
-                        <h3 class="heading__terceary">Title</h3>
-                        <p>Some text inside modal</p>
+                        <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius, iste aspernatur saepe voluptatibus</p>
                     </div>
                 </div>
             </div>
@@ -206,10 +210,11 @@
                 </div>
                 <div class="popup__right">
                     <a href="#art" class="popup__close">&times;</a>
-                    <div class="modal__description">
+                    <div class="popup__description">
                         <span>12.03.2020</span>
-                        <h3 class="heading__terceary">Title</h3>
-                        <p>Some text inside modal</p>
+                        <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius, iste aspernatur saepe voluptatibusl</p>
                     </div>
                 </div>
             </div>
@@ -221,10 +226,11 @@
                 </div>
                 <div class="popup__right">
                     <a href="#art" class="popup__close">&times;</a>
-                    <div class="modal__description">
+                    <div class="popup__description">
                         <span>12.03.2020</span>
-                        <h3 class="heading__terceary">Title</h3>
-                        <p>Some text inside modal</p>
+                        <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius, iste aspernatur saepe voluptatibus</p>
                     </div>
                 </div>
             </div>
@@ -253,7 +259,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -272,7 +279,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -291,7 +299,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -310,7 +319,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -329,7 +339,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -347,7 +358,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -371,7 +383,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -390,7 +403,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -409,7 +423,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -428,7 +443,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -447,7 +463,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -465,7 +482,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -487,7 +505,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -506,7 +525,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -527,7 +547,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -546,7 +567,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -564,7 +586,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -587,7 +610,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -606,7 +630,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -625,7 +650,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -644,7 +670,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -663,7 +690,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -681,7 +709,8 @@
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
-                                <p>Some text inside modal</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ipsum minus beatae eius,</p>
                             </div>
                         </div>
                     </div>
@@ -787,9 +816,11 @@
         </div>
 
         <!-- ====== CV TIMELINE ====== -->
-        <h2 class="heading__secondary" data-text="03">Curriculum Vitae</h2>
+        <h2 class=" heading__secondary" id="cv" data-text="03">Curriculum Vitae</h2>
+        <h2 class="js-heading__secondary" data-text="03">CV</h2>
+
         <div class="cv">
-            <div class="mentors__box">
+            <!-- <div class="mentors__box">
                 <div class="content left">
                     <h3 class="heading__terceary grey">Mentors</h3>
                     <p><span class="mentor">Kimball Geisler</span> &ndash; Plein Air
@@ -803,7 +834,7 @@
                     <p><span class="mentor">Bryce Pendleton</span>&ndash; Design,
                         Southern Virginia University</p>
                 </div>
-            </div>
+            </div> -->
             <div class="timeline">
                 <div class="container right">
                     <div class="content">
