--- a/coltermay.com/index.html
+++ b/coltermay.com/index.html
@@ -920,12 +920,9 @@
         </div>
 
         <div class="about__video">
-            <!-- <h3 class="heading__terceary mg-bottom-md white">The Creative Mind</h3> -->
-            <iframe src="https://www.youtube.com/embed/1oK0I8pvjxM" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen poster="./img/thumbnail-video.png">
-            </iframe>
-
+            <iframe src="https://www.youtube.com/embed/lugard7P0nw" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen></iframe>
         </div>
         <div class="statement__box">
             <h2 class="heading__secondary" data-text="04">Artist's statement</h2>
