testing braker responsive images

--- a/coltermay.com/index.html
+++ b/coltermay.com/index.html
@@ -639,7 +639,7 @@
                     <div class="modal">
                         <div class="close">&#x2715;</div>
                         <div class="long-horizontal">
-                            <img src="./img/cocodrilo" alt="Cocodrilo" class="frame">
+                            <img src="./img/cocodrilo.jpeg" alt="Cocodrilo" class="frame">
                             <div class="modal__description">
                                 <span>12.03.2020</span>
                                 <h3 class="heading__terceary mg-top-sm mg-bottom-sm">Title</h3>
@@ -972,7 +972,7 @@
     <section class="breaker3"></section>
 
 
-    <section class="section__contact">
+    <section class="section__contact" id="contact">
         <h2 class="heading__secondary" data-text="05">Contact</h2>
         <div class="contact__box">
             <div class="contact__container">
